...
            android:queryHint="@string/cerca"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerUtenti"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:padding="8dp"
            tools:listitem="@layout/card_operaio"
            app:layout_constraintTop_toBottomOf="@id/searchUtenti"
            app:layout_constraintBottom_toTopOf="@id/fabSalvaOperatori"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fabSalvaOperatori"
            android:layout_width="0dp"
...
